feat(growth): restore negotiation maximizer skill (#16)